--- a/styles/matlletus.css
+++ b/styles/matlletus.css
@@ -47,7 +47,8 @@ nav ul {
     justify-content: space-between;
     flex-wrap: wrap; */
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns:  repeat(4, 1fr);
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     grid-gap: 10px;
     list-style: none;
 }
@@ -60,6 +61,40 @@ nav a:hover {
 main img {
     width: 100%;
     height: auto;
+}
+.mat-background {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.mat-background img {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.mat-back {
+    grid-column: 1/2;
+    grid-row: 1/2;;
+    justify-self: center;
+    /* background-color: red; */
+    /* align-self: center; */
+}
+.mat-back p {
+    color: white;
+    text-align: center;
+    padding: 50px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+.mat-back a {
+    text-decoration: none;
+    color: white;
+    background-color: var(--color-highlight);
+    padding: 20px;
+    border-radius: 15px;
+
+}
+.mat-back a:hover {
+    background-color: var(--color-success);
+    
 }
 /* main {
     display: grid;
