--- a/styles/matlletus.css
+++ b/styles/matlletus.css
@@ -96,6 +96,19 @@ main img {
     background-color: var(--color-success);
     
 }
+.quote {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+.quote p {
+    font-style: italic;
+    width: 62%;
+    text-align: center;
+    padding: 40px;
+    /* background-color: rebeccapurple; */
+    /* margin-left: 90px; */
+}
 /* main {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
